fix flexbox collapsing on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -149,13 +149,14 @@ nav
 {
 	display: flex;
 	flex-flow: column;
-	flex: 1 0 0%;
+	flex: 1 0 auto;
 	padding: 1rem 0;
 }
 
 .project-title, .project-client
 {
 	line-height: 1.2;
+	flex: 1 0 auto;
 }
 
 .project-title
@@ -181,7 +182,7 @@ nav
 
 .project-image, .project-description
 {
-	flex: 1 0 0%;
+	flex: 1 0 auto;
 }
 
 
